# itk

./: pyproject.toml
src/: lru_cache.py
src/course_1/module_2/: binary_search_topic_8.py
src/course_1/module_3/: fetch_ulrs_from_file.py
src/course_1/module_5/: asgi_exchange_rate.py  wsgi_exchange_rate.py
src/course_2/module_1/: fetch_task.py  rate_limiter.py  redis_queue.py  single.py
src/course_3/tasks/module_1/: topic_1.py  topic_2.py  topic_3.py  topic_4.py
src/course_3/tasks/module_2/: topic_1.py
src/module_1/: class_attrs.py  lru_cache.py
src/module_1/singletones/: singletone_examples.py
src/module_3/: fetch_ulrs_from_file.py  fetch_urls.py
src/module_4/: process_numbers.py
src/module_5/: asgi_exchange_rate.py  wsgi_exchange_rate.py
src/singletones/modules/: __init__.py  singletone_module.py
