[project]
name = "itk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "aiologic>=0.14.0",
    "django>=5.2.4",
    "gunicorn>=23.0.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "ruff>=0.12.4",
    "tabulate>=0.9.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = []

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
